--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "prisma": "6.16.2",
+    "shiki": "^3.12.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
