chore: vercel analytics installed

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.89.0",
     "@upstash/vector": "^1.2.2",
+    "@vercel/analytics": "^1.5.0",
     "ai": "^5.0.47",
     "better-auth": "^1.3.12",
     "class-variance-authority": "^0.7.1",
